@@ -2,8 +2,6 @@
 
 -probar tbblue CP/M
 
--bruce lee tsconf lee puerto BF7E
-
 -seguir probando speech menu con stdout y con drivers no-stdout
 
 -meter real tape en linea comandos siempre acelera la carga, aunque este desactivado
@@ -12,7 +10,6 @@
 -Revisar al expulsar cinta si Windows lo libera 
 
 -En overscan con curses salen colores con ??? a la derecha fuera de pantalla 
-
 
 
 -Opción para formato de grabación de autosave snap
@@ -37,7 +34,6 @@ Abort trap: 6
 
 ---Cosas Next
 -otros cambios registros: ejemplo 0x68 , bits 5-1
--autoload ahora esta en menu aparte de la rom, en more...
 
 -tbblue mmc no debe incluir archivos de cpm que hay que descargarse
 -tbblue. registro 6b bit 1: 1	1 to activate 512 tile mode (bit 0 of tile attribute is ninth bit of tile-id)
